Fix z-index on hero

--- a/assets/scss/blocks/nova-blocks/hero/_custom.scss
+++ b/assets/scss/blocks/nova-blocks/hero/_custom.scss
@@ -55,3 +55,7 @@
 .novablocks-u-background-dark {
     @include variation(dark);
 }
+
+[class*="novablocks-u-content"] {
+    z-index: 10;
+}
