--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3619,6 +3619,9 @@ span.page-numbers {
   --current-light-secondary: var(--sm-dark-secondary);
   --current-light-tertiary: var(--sm-dark-tertiary); }
 
+[class*="novablocks-u-content"] {
+  z-index: 10; }
+
 .novablocks-map__marker-name {
   position: absolute;
   top: 50%;
